# abx-next

./: .coverage  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILE_TREE.md  README.md  mkdocs.yml  pyproject.toml  pypropject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/concepts/: sequential.md  switchback.md  variance_reduction.md
examples/: power_simulation.py  quickstart_ab.py
src/abx_next/: __init__.py
src/abx_next/analysis/: __init__.py  cuped.py  diff.py  ratios.py  sequential.py  srm.py  srm_diag.py  triggered.py
src/abx_next/core/: __init__.py  errors.py  validate.py
src/abx_next/design/: switchback.py
src/abx_next/providers/: __init__.py  sklearn_cupac.py
src/abx_next/sim/: __init__.py  power_mean.py  power_prop.py
src/abx_next/utils/: logging.py  types.py
tests/: test_cupac.py  test_cuped.py  test_power.py  test_power_tools.py  test_ratios.py  test_sequential.py  test_srm.py  test_srm_diag.py  test_switchback_v2.py  test_triggered.py
